Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24575

Suggest creating .h/.cpp file, when user presses F4, when that file does not exist

XMLWordPrintable

    • eb7332fb8 (master)

      For now you have to always create two files manually in order to add them to project.

      Would be great having a feature to auto-create the source or header file if header or source file is already present and user presses F4.

        For Gerrit Dashboard: QTCREATORBUG-24575
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            fclushio fclushio
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes