ProjectExplorer: Allow to create corresponding header/source file

... from the project tree context menu.

Task-number: QTCREATORBUG-24575
Change-Id: I65a9daf237cbbcfcfdf2b7b67191c249695a6b7b
Reviewed-by: Christian Stenger <christian.stenger@qt.io>